<resources>
    <string name="app_name">RCTest</string>
    <string name="im_1">聊天列表</string>
    <string name="im_2">聊天页面</string>
    <string name="im_3">刷新用户信息</string>
    <string name="im_4">群聊</string>
    <string name="im_5">另一个群聊</string>
    <string name="im_6">6</string>
    <string name="im_7">7</string>
    <string name="title_activity_login">登陆融云</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
