<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/conversationList"
        android:text="@string/im_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <Button
        android:id="@+id/conversation"
        android:text="@string/im_2"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <Button
        android:id="@+id/updateUserInfo"
        android:text="@string/im_3"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <Button
        android:id="@+id/groupConversation"
        android:text="@string/im_4"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <Button
        android:id="@+id/groupConversation1"
        android:text="@string/im_5"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <TextView
        android:id="@+id/userInfo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"/>

</LinearLayout>